[JBIDE-8090] set window titles to wizards
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29608 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -15,6 +15,7 @@ CloudConnectionTestSuccess.msg=Connection Test successful
 CloudConnectionTestFailure.msg=Connection Test failed
 CloudConnectionTestingCredentials.msg=Testing credentials...
 CloudConnectionInvalidCredentials.msg=Invalid credentials
+NewCloudConnection.name=New Cloud Connection
 
 EditCloudConnection.name=Edit Cloud Connection
 EditCloudConnectionError.title=Error Editing Cloud Connection
