Fixed maven build
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29612 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/docs/reference/publican.cfg
+++ b/bpel/docs/reference/publican.cfg
@@ -4,6 +4,16 @@
 xml_lang: en-US
 type: Book
 brand: JBoss
-condition: jbosstools
-#condition: jbds
+
+# the Jboss.org Tools installation instructions are compiled against the
+# "jbosstools" condition, and JBDS installation instructions are compiled
+# against the "jbds" condition.
+
+# However, this only affects the Publican builds
+# (the master.xml file defines what Maven builds), so the only reason
+# to specify the "jbosstools" condition is to compile the community docs
+# in Publican
+
+#condition: jbosstools
+condition: jbds
 
