--- a/bpel/plugins/org.eclipse.bpel.model/.settings/org.eclipse.jdt.core.prefs
+++ b/bpel/plugins/org.eclipse.bpel.model/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,8 @@
-#Fri Sep 22 13:21:54 PDT 2006
+#Wed Mar 09 09:51:41 CST 2011
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.source=1.6
