[JBIDE-8090] set window titles to wizards
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@29745 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -15,6 +15,7 @@ CloudConnectionTestSuccess.msg=Connection Test successful
 CloudConnectionTestFailure.msg=Connection Test failed
 CloudConnectionTestingCredentials.msg=Testing credentials...
 CloudConnectionInvalidCredentials.msg=Invalid credentials
+NewCloudConnection.name=New Cloud Connection
 
 EditCloudConnection.name=Edit Cloud Connection
 EditCloudConnectionError.title=Error Editing Cloud Connection
@@ -83,6 +84,7 @@ ErrorImageIdNotFound.text = Could not find image with id \"{0}\"
 ErrorMustProvideName.text=A name must be specified
 ErrorMustProvideKeyName.text=A key name must be specified
 ErrorMustProvideImageId.text=An image id must be specified
+ShowSSH2Preferences.label=<a>Show Private Keys in preferences</a>
 
 NewInstance.desc=Specify details for a new instance you wish to launch based on an image
 NewInstance.title=Launch Instance
@@ -120,6 +122,6 @@ CreateKey.msg=Specify a unique id for a new key:
 ConfirmKeyDelete.title=Confirm Key Delete
 ConfirmKeyDelete.msg=Confirm deletion of key: {0}
 
-StartingInstance.title=Starting Instance
+StartingInstance.title=Starting Instance {0}
 StartingInstance.msg=Starting Instance: {0}
 ConnectingRSE.msg=Connecting instance as: {0}
