--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
@@ -58,6 +58,9 @@ StopInstancesDialog.title=Stop Instances
 StopInstancesDialog.msg=Please choose the instances that shall be stopped by checking them:
 StopInstancesDialogError.title=Error while stopping instance(s)
 StopInstancesDialogError.msg=Could not stop instance(s) {0}
+StopInstancesConfirm.title=Confirm instance stop
+StopInstancesConfirm.msg=You are about to stop a running system(s), that might be in production. Are you sure that you want to stop the given instance(s)?
+StopInstancesConfirmDontWarn.msg=Don't warn me again
 RebootingInstance.title=Rebooting Instance
 RebootingInstance.msg=Rebooting Instance: {0}
 RebootInstancesDialog.title=Reboot Instances
