--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
@@ -377,12 +377,26 @@
          <menuContribution 
 			locationURI="popup:org.jboss.tools.jst.jsp.jspeditor.JSPTextEditor.source.EditorContext?after=org.jboss.tools.vpe.editor.menu.SetupTemplateContributionItem">
         	<dynamic
+               class="org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem"
+               id="org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem">
+        	</dynamic>
+        </menuContribution>
+        <menuContribution
+              locationURI="popup:org.jboss.tools.jst.jsp.jspeditor.HTMLTextEditor.source.EditorContext?after=org.jboss.tools.vpe.editor.menu.SetupTemplateContributionItem">
+        	<dynamic
+               class="org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem"
+               id="org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem">
+        	</dynamic>
+        </menuContribution>
+         <menuContribution 
+			locationURI="popup:org.jboss.tools.jst.jsp.jspeditor.JSPTextEditor.source.EditorContext?after=org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem">
+        	<dynamic
                class="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem"
                id="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem">
         	</dynamic>
         </menuContribution>
         <menuContribution
-              locationURI="popup:org.jboss.tools.jst.jsp.jspeditor.HTMLTextEditor.source.EditorContext?after=org.jboss.tools.vpe.editor.menu.SetupTemplateContributionItem">
+              locationURI="popup:org.jboss.tools.jst.jsp.jspeditor.HTMLTextEditor.source.EditorContext?after=org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem">
         	<dynamic
                class="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem"
                id="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem">
