[JBIDE-8594] enabled handlers when image-/instance-view is active or cloud is selected in cloud viewer,	changed handlers to be able to adapt image-/instance-view to DeltaCloud instance
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29822 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -330,41 +330,31 @@
       <handler
             class="org.jboss.tools.deltacloud.ui.commands.FilterImagesHandler"
             commandId="org.jboss.tools.deltacloud.ui.filterimages">
-			<activeWhen>
-               <with
-                     variable="selection">
-					<iterate operator="and">
-							<adapt
-					             type="org.jboss.tools.deltacloud.core.DeltaCloud">								
-			               	</adapt>
-	               	</iterate>
-               </with>
-			</activeWhen>
 			<enabledWhen>
-				<with
-					variable="selection">
-					<count value="+" />
-				</with>
+				<or>
+					<with
+						variable="selection">
+						<count value="1" />
+					</with>
+					<with variable="activePartId">
+          				<equals value="org.jboss.tools.deltacloud.ui.views.ImageView"/>
+       				</with>
+   				</or>
 			</enabledWhen>
       </handler>
       <handler
             class="org.jboss.tools.deltacloud.ui.commands.FilterInstancesHandler"
             commandId="org.jboss.tools.deltacloud.ui.filterinstances">
-			<activeWhen>
-               <with
-                     variable="selection">
-					<iterate operator="and">
-							<adapt
-					             type="org.jboss.tools.deltacloud.core.DeltaCloud">								
-			               	</adapt>
-	               	</iterate>
-               </with>
-			</activeWhen>
 			<enabledWhen>
-				<with
-					variable="selection">
-					<count value="+" />
-				</with>
+				<or>
+					<with
+						variable="selection">
+						<count value="1" />
+					</with>
+					<with variable="activePartId">
+          				<equals value="org.jboss.tools.deltacloud.ui.views.InstanceView"/>
+       				</with>
+   				</or>
 			</enabledWhen>
       </handler>
    </extension>
