JBIDE-8602 https://issues.jboss.org/browse/JBIDE-8602
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29866 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/common/plugins/org.jboss.tools.common.model/plugin.xml
+++ b/common/plugins/org.jboss.tools.common.model/plugin.xml
@@ -397,4 +397,13 @@
           resource="meta/options_general.xml" priority="0">
     </contribution>
  </extension>
+
+	<extension point="org.eclipse.core.runtime.adapters">
+	  <factory 
+	         class="org.jboss.tools.common.model.impl.XModelObjectToResourceAdapter" 
+	         adaptableType="org.jboss.tools.common.model.XModelObject">	            
+	    <adapter type="org.eclipse.core.resources.IResource"/>
+	  </factory>
+	</extension>
+
 </plugin>
