JBIDE-8567 https://issues.jboss.org/browse/JBIDE-8567
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29892 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/esb/plugins/org.jboss.tools.esb.ui/plugin.xml
+++ b/esb/plugins/org.jboss.tools.esb.ui/plugin.xml
@@ -56,14 +56,20 @@
 		<xclass id="org.jboss.tools.esb.ui.wizard.NewActionWizard"
 			class="org.jboss.tools.esb.ui.wizard.NewActionWizard"/>
 			
+		<xclass id="org.jboss.tools.esb.ui.editor.attribute.adapter.RoutingFormDependency"
+			class="org.jboss.tools.esb.ui.editor.attribute.adapter.RoutingFormDependency"/>
 	</extension>
 
    <extension point="org.jboss.tools.common.model.ui.attributeAdapter">
       <attributeAdapter class="org.jboss.tools.esb.ui.editor.attribute.adapter.BusListAdapter" id="ESBBusList"/>
+      <attributeAdapter class="org.jboss.tools.esb.ui.editor.attribute.adapter.ServiceCategoryListAdapter" id="ESBServiceCategoryList"/>
+      <attributeAdapter class="org.jboss.tools.esb.ui.editor.attribute.adapter.ServiceNameListAdapter" id="ESBServiceNameList"/>
    </extension>
 
    <extension point="org.jboss.tools.common.model.ui.attributeEditor">
       <attributeEditor class="org.jboss.tools.common.model.ui.attribute.editor.ComboBoxEditor" id="ESBBusList"/>
+      <attributeEditor class="org.jboss.tools.common.model.ui.attribute.editor.ComboBoxEditor" id="ESBServiceCategoryList"/>
+      <attributeEditor class="org.jboss.tools.common.model.ui.attribute.editor.ComboBoxEditor" id="ESBServiceNameList"/>
    </extension>
 
 
