[JBIDE-8326] added button that resets all filters
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29918 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -55,6 +55,7 @@ FindButton.label=Find...
 NewButton.label=New...
 DeleteButton.label=Delete
 DefaultButton.label=Default
+DefaultAllButton.label=Default All
 
 Pem.name=PEM file (*.pem)
 
