--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties
@@ -58,6 +58,9 @@ StopInstancesDialog.title=Stop Instances
 StopInstancesDialog.msg=Please choose the instances that shall be stopped by checking them:
 StopInstancesDialogError.title=Error while stopping instance(s)
 StopInstancesDialogError.msg=Could not stop instance(s) {0}
+StopInstancesConfirm.title=Confirm instance stop
+StopInstancesConfirm.msg=You are about to stop a running system(s), that might be in production. Are you sure that you want to stop the given instance(s)?
+StopInstancesConfirmDontWarn.msg=Don't warn me again
 RebootingInstance.title=Rebooting Instance
 RebootingInstance.msg=Rebooting Instance: {0}
 RebootInstancesDialog.title=Reboot Instances
@@ -75,10 +78,15 @@ ConfirmCloudDelete.title=Confirm Cloud Disconnect
 ConfirmCloudDelete.msg=Please choose the clouds that shall be disconnected by checking them:
 CreateInstance.label=Launch Instance
 
-NAME=Name
-ALIAS=Alias
-ID=ID
-HOSTNAME=Public Hostname
-STATUS=State
-ARCH=Architecture
-DESC=Description
+DeltaCloudElementColumn.name.label=Name
+DeltaCloudElementColumn.alias.label=Alias
+DeltaCloudElementColumn.id.label=Id
+DeltaCloudElementColumn.imageId.label=Image Id
+DeltaCloudElementColumn.ownerId.label=Owner Id
+DeltaCloudElementColumn.keyId.label=Key Id
+DeltaCloudElementColumn.realm.label=Realm
+DeltaCloudElementColumn.profile.label=Profile
+DeltaCloudElementColumn.state.label=State
+DeltaCloudElementColumn.hostname.label=Public Hostname
+DeltaCloudElementColumn.architecture.label=Architecture
+DeltaCloudElementColumn.description.label=Description
