JBIDE-5387 OpenOn does not work for CSS links in HTML files for plain Web Projects
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29935 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.text.ext/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.text.ext/plugin.xml
@@ -283,6 +283,9 @@
          		<partitionType id="com.ibm.sse.STYLE">
          			<!--axis path="*/style/" /-->
          		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_LINK">
+         			<axis path="*/link/*" ignoreCase="true"/>
+         		</partitionType>
          	</contentType>
          	<contentType id="org.eclipse.wst.html.core.htmlsource">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
@@ -293,6 +296,9 @@
          		</partitionType>
          		<partitionType id="com.ibm.sse.STYLE">
          			<!--axis path="*/style/" /-->
+         		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_LINK">
+         			<axis path="*/link/*" ignoreCase="true"/>
          		</partitionType>
          	</contentType>
          	<contentType id="jsf.facelet">
@@ -305,6 +311,9 @@
          		<partitionType id="com.ibm.sse.STYLE">
          			<!--axis path="*/style/" /-->
          		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_LINK">
+         			<axis path="*/link/*" ignoreCase="true"/>
+         		</partitionType>
          	</contentType>
          	<contentType id="jsf.facelet.composite">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
@@ -316,6 +325,9 @@
          		<partitionType id="com.ibm.sse.STYLE">
          			<!--axis path="*/style/" /-->
          		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_LINK">
+         			<axis path="*/link/*" ignoreCase="true"/>
+         		</partitionType>
          	</contentType>
          	<contentType id="org.jboss.tools.jst.jsp.jspincludesource">
          		<partitionType id="org.jboss.tools.common.text.ext.xml.XML_ATTRIBUTE_VALUE">
@@ -326,6 +338,9 @@
          		</partitionType>
          		<partitionType id="com.ibm.sse.STYLE">
          			<!--axis path="*/style/" /-->
+         		</partitionType>
+         		<partitionType id="org.jboss.tools.common.text.ext.jsp.JSP_LINK">
+         			<axis path="*/link/*" ignoreCase="true"/>
          		</partitionType>
          	</contentType>
 		</hyperlinkPartitioner>
