--- a/esb/plugins/org.jboss.tools.esb.ui/plugin.xml
+++ b/esb/plugins/org.jboss.tools.esb.ui/plugin.xml
@@ -49,6 +49,8 @@
 			class="org.jboss.tools.esb.ui.editor.form.ESBXMLFormLayoutData"/>
 		<xclass id="org.jboss.tools.esb.ui.editor.attribute.ActionClassValueFilter"
 			class="org.jboss.tools.esb.ui.editor.attribute.ActionClassValueFilter"/>
+		<xclass id="org.jboss.tools.esb.ui.editor.attribute.MessageStoreClassValueFilter"
+			class="org.jboss.tools.esb.ui.editor.attribute.MessageStoreClassValueFilter"/>
 		<xclass id="org.jboss.tools.esb.ui.editor.form.ESBActionForm"
 			class="org.jboss.tools.esb.ui.editor.form.ESBActionForm"/>
 		<xclass id="org.jboss.tools.esb.ui.wizard.AddGenericActionStep"
