--- a/examples/tests/org.jboss.tools.project.examples.test/.settings/org.eclipse.jdt.core.prefs
+++ b/examples/tests/org.jboss.tools.project.examples.test/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,8 @@
-#Wed Oct 21 17:40:14 PDT 2009
+#Thu Feb 10 15:37:17 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.source=1.6
