[JBIDE-8416] implemented custom property sheet page so that elements opied (to the clipboard) from it do not contain the label
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@29972 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -324,6 +324,23 @@
 			</enabledWhen>
       </handler>
    </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+	   <!-- copy property sheet entry handler -->
+      <handler
+            class="org.jboss.tools.deltacloud.ui.commands.CopyCVPropertySheetPageEntryHandler"
+            commandId="org.eclipse.ui.edit.copy">
+		<activeWhen>
+			<with
+				variable="selection">
+					<iterate>
+	               		<instanceof
+							value="org.jboss.tools.deltacloud.ui.views.cloud.property.CVPropertySheetPage$PropertySourceContentProvider$CVPropertySheetPageEntry" />
+					</iterate>
+			</with>
+		</activeWhen>
+      </handler>
+   </extension>
    <!-- InstanceView context menu ================================== -->
    <extension point="org.eclipse.ui.menus">
       <menuContribution
@@ -675,6 +692,25 @@
  	  
 	</extension>
 
+   <!-- CVPropertySheetPage context menu ================================== -->
+   <extension point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="true"
+            locationURI="popup:org.jboss.tools.deltacloud.ui.views.CVPropertySheetPage">
+			<separator
+				name="edit"
+				visible="true" />
+	  </menuContribution>
+ 	  <!-- filter images -->
+      <menuContribution
+            allPopups="true"
+            locationURI="popup:org.jboss.tools.deltacloud.ui.views.CVPropertySheetPage?after=edit">	
+	        <!-- image commands -->
+	         <command
+	               commandId="org.eclipse.ui.edit.copy"/>
+ 	  </menuContribution>
+	</extension>
+	
 	<!-- Commands ========================================= -->
     <extension
          point="org.eclipse.ui.commands">
