[JBIDE-8148] editing and creating clouds in background jobs now
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@29973 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -11,6 +11,8 @@
 CloudConnection.desc=Specify connection details for a cloud you wish to access
 CloudConnection.title=Cloud Connection
 CloudConnection.name=Cloud Connection
+CloudConnection.msg=Create cloud {0}
+CloudConnectionError.msg=Could not create cloud {0}
 CloudConnectionTestSuccess.msg=Connection Test successful
 CloudConnectionTestFailure.msg=Connection Test failed
 CloudConnectionTestingCredentials.msg=Testing credentials...
@@ -18,6 +20,7 @@ CloudConnectionInvalidCredentials.msg=Invalid credentials
 NewCloudConnection.name=New Cloud Connection
 
 EditCloudConnection.name=Edit Cloud Connection
+EditCloudConnection.message=Edit Cloud {0}
 EditCloudConnectionError.title=Error Editing Cloud Connection
 EditCloudConnectionError.message=Could not open connection wizard
 
