--- a/usage/plugins/org.jboss.tools.usage/pom.xml
+++ b/usage/plugins/org.jboss.tools.usage/pom.xml
@@ -10,4 +10,8 @@
 	<artifactId>org.jboss.tools.usage</artifactId> 
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
+	<properties>
+		<emma.filter>org.jboss.tools.usage*</emma.filter>
+		<emma.instrument.bundles>org.jboss.tools.usage</emma.instrument.bundles>
+	</properties>
 </project>
