git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30004 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/runtime/features/pom.xml
+++ b/runtime/features/pom.xml
@@ -14,5 +14,6 @@
 	<modules>
 		<module>org.jboss.tools.runtime.core.feature</module>
 		<module>org.jboss.tools.runtime.feature</module>
+		<module>org.jboss.tools.runtime.test.feature</module>
 	</modules>
 </project>
