perf tests: working saving results to network DB, fixed generating correct buildID and config
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30029 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/tests/plugins/org.jboss.tools.tests.performance/scripts/jbt-perf-prepare.properties
+++ b/tests/plugins/org.jboss.tools.tests.performance/scripts/jbt-perf-prepare.properties
@@ -1,5 +1,20 @@
 jbt.dependencies.folder=libs
-jbt.host.desc=ram=4G;CPUs=2
+
+# property with format config=<host config name>;jvm=<jvm name>
+jbt.host.desc=config=Linux1;jvm=sun
 workdir=workdir
+
+# set of tests to run
 tests=all
-jbt.perf.db.loc=${basedir}/db
+#tests=ant
+# setup build Type:	R - for release (GA, milestontes) - will be used for baselining
+#			x - otherwise
+jbt.build.type=x
+# URL of JBossTools build
+#get.zip.jboss.tools=http://download.jboss.org/jbosstools/builds/nightly/3.2_stable_branch/2011-03-21_12-29-04-H586/all/jbosstools-3.2_stable_branch.aggregate-Update-2011-03-21_12-29-04-H586.zip
+#database connection
+# use //<IP> for network DB or <path> for local DB
+#jbt.perf.db.loc=//derbydb.example.com
+jbt.perf.db.loc=/tmp/perfdb
+# setup connection properties
+jbt.perf.db.props=create=true;dbname=jbt;dbuser=jbt;dbpasswd=pass
