--- a/runtime/tests/pom.xml
+++ b/runtime/tests/pom.xml
@@ -1,9 +1,9 @@
 <project
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.jboss.tools.maven</groupId>
+	<groupId>org.jboss.tools.runtime</groupId>
 	<artifactId>tests</artifactId>
-	<name>maven.tests</name>
+	<name>runtime.tests</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
