--- a/tests/plugins/org.jboss.tools.tests.performance/scripts/jbt-perf-prepare.properties
+++ b/tests/plugins/org.jboss.tools.tests.performance/scripts/jbt-perf-prepare.properties
@@ -1,20 +1,22 @@
 jbt.dependencies.folder=libs
 
 # property with format config=<host config name>;jvm=<jvm name>
-jbt.host.desc=config=Linux1;jvm=sun
+jbt.host.desc=config=myhost;jvm=sun
 workdir=workdir
 
 # set of tests to run
 tests=all
 #tests=ant
-# setup build Type:	R - for release (GA, milestontes) - will be used for baselining
-#			x - otherwise
-jbt.build.type=x
+jbt.build.prefix=JBT
+#jbt.build.prefix=JBT
+#install JBoss Tools on top of eclipse?
+jbt.install.tools=true
 # URL of JBossTools build
-#get.zip.jboss.tools=http://download.jboss.org/jbosstools/builds/nightly/3.2_stable_branch/2011-03-21_12-29-04-H586/all/jbosstools-3.2_stable_branch.aggregate-Update-2011-03-21_12-29-04-H586.zip
-#database connection
+get.zip.jboss.tools=http://download.jboss.org/jbosstools/builds/nightly/3.2_stable_branch/2011-03-21_12-29-04-H586/all/jbosstools-3.2_stable_branch.aggregate-Update-2011-03-21_12-29-04-H586.zip
+# database connection
 # use //<IP> for network DB or <path> for local DB
-#jbt.perf.db.loc=//derbydb.example.com
+#jbt.perf.db.loc=//perfdb.example.com
 jbt.perf.db.loc=/tmp/perfdb
 # setup connection properties
-jbt.perf.db.props=create=true;dbname=jbt;dbuser=jbt;dbpasswd=pass
+jbt.perf.db.props=create=true;dbname=jbt;dbuser=jbds;dbpasswd=secret
+perf.dimensions=CPU Time,Kernel Time,Elapsed Process,Used Java Heap
