[JBIDE-8290] delete is now only available on cloud items in the cloud viewer
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30110 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -142,9 +142,8 @@
 				variable="selection">
 				<and>
 					<count value="+" />
-					<iterate operator="and">
-						<adapt
-				             type="org.jboss.tools.deltacloud.core.DeltaCloud" />
+					<iterate operator="or">
+						<instanceof value="org.jboss.tools.deltacloud.ui.views.cloud.CloudItem" />
 				    </iterate>
 				</and>
 			</with>
