[JBIDE-7772] added "Manage Keys" to cloud context menu in cloud viewer
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30143 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.properties
@@ -53,6 +53,10 @@ command.rebootinstance.description = Reboots a cloud instance
 command.rebootinstance.name = Reboot
 command.destroyinstance.name = Destroy
 command.destroyinstance.description = Destroys a cloud instance
+command.managekeys.description = Manages the keys of a cloud
+command.managekeys.name = Manage Keys
+command.managekeys.label = Manage Keys
+command.managekeys.tooltip = Manage Keys
 command.filterimages.description = Filters images
 command.filterimages.name = Filter Images...
 command.filterinstances.description = Filters instances
