--- a/deltacloud/plugins/org.jboss.tools.deltacloud.client/build.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.client/build.properties
@@ -1,6 +1,8 @@
-bin.includes = META-INF/,\
+jars.compile.order = .
+source.. = src/
+output.. = bin/
+src.includes = about.html,\
+               ChangeLog
+bin.includes = ChangeLog,\
                about.html,\
-               pom.xml
-src.includes = ChangeLog,\
-               about.html,\
-               pom.xml
+               META-INF/
