--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/build.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/build.properties
@@ -1,20 +1,9 @@
-source.. = src/,\
+jars.compile.order = .
+source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               lib/apache-mime4j-0.6.jar,\
-               lib/commons-codec-1.3.jar,\
-               lib/commons-logging-1.1.1.jar,\
-               lib/httpclient-4.0.1.jar,\
-               lib/httpcore-4.0.1.jar,\
-               lib/httpcore-nio-4.0.1.jar,\
-               lib/httpmime-4.0.1.jar,\
-               lib/log4j-1.2.14.jar,\
+bin.includes = about.html,\
+               ChangeLog,\
+               META-INF/
+src.includes = ChangeLog,\
                about.html,\
-               pom.xml,\
-               src/,\
-               .settings/,\
-               .project
-src.includes = bin/,\
-               lib/,\
                pom.xml
