--- a/download.jboss.org/jbosstools/updates/requirements/m2eclipse/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/m2eclipse/build.xml
@@ -16,22 +16,30 @@
 			-f ~/RHDS/updates/requirements/m2eclipse/build.xml -Ddestination=/tmp/m2eclipse-repo
 	-->
 	<target name="mirror">
+		<property name="URL1" value="https://repository.sonatype.org/content/sites/forge-sites/m2e/0.13.0/N/0.13.0.201103291237/"/>
+		<property name="URL2" value="https://repository.sonatype.org/content/sites/forge-sites/m2e-extras/0.13.0/N/0.13.0.201103252105/"/>
+		<property name="URL3" value="https://repository.sonatype.org/content/sites/forge-sites/m2eclipse-wtp/0.13.0/N/0.13.0.201103231111/"/>
+
+		<!-- 
 		<property name="URL1" value="http://m2eclipse.sonatype.org/sites/m2e/" />
 		<property name="URL2" value="http://m2eclipse.sonatype.org/sites/m2e-extras/" />
+		<property name="URL3" value="http://download.eclipse.org/technology/m2e/updates/M/" /> 
+		-->
 		
 		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/m2eclipse/" />
 		<property name="compress" value="true" />
 
 		<p2.mirror>
-			<repository location="file:${destination}/0.12/" name="m2eclipse plugins for Eclipse 3.6 - 3.7" />
+			<repository location="file:${destination}/0.13.0.201103291237/" name="m2eclipse 0.13.0.201103291237 plugins for Eclipse 3.6 - 3.7" />
 			<source>
 				<repository location="${URL1}" />
 				<repository location="${URL2}" />
+				<repository location="${URL3}" />
 			</source>
 
 			<slicingOptions includeFeatures="true" followStrict="true" />
 		</p2.mirror>
 
-		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/0.12/" artifactRepository="file:${destination}/0.12/" publishartifacts="true" source="${destination}/0.12/" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/0.13.0.201103291237/" artifactRepository="file:${destination}/0.13.0.201103291237/" publishartifacts="true" source="${destination}/0.13.0.201103291237/" compress="${compress}" />
 	</target>
 </project>
