[JBIDE-8655] added "Launch instance" to context menu and toolbar in instance view
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30177 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -400,6 +400,13 @@
             allPopups="true"
             locationURI="popup:org.jboss.tools.deltacloud.ui.views.InstanceView?after=instances">	
          <command
+               commandId="org.jboss.tools.deltacloud.ui.createinstanceFromAnyImage"
+               icon="icons/instance.gif"
+               label="%command.createinstance.label"
+               style="push"
+               tooltip="%command.createinstance.tooltip">
+         </command>
+         <command
                commandId="org.jboss.tools.deltacloud.ui.startinstance"
                disabledIcon="icons/rund.gif"
                icon="icons/run.gif"
@@ -468,6 +475,13 @@
       <menuContribution
             allPopups="true"
             locationURI="toolbar:org.jboss.tools.deltacloud.ui.views.InstanceView?after=instances">	
+		<command
+               commandId="org.jboss.tools.deltacloud.ui.createinstanceFromAnyImage"
+               icon="icons/instance.gif"
+               label="%command.createinstance.label"
+               style="push"
+               tooltip="%command.createinstance.tooltip">
+         </command>
          <command
                commandId="org.jboss.tools.deltacloud.ui.startinstance"
                disabledIcon="icons/rund.gif"
