--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -250,19 +250,25 @@
             class="org.jboss.tools.deltacloud.ui.commands.CreateInstanceFromAnyImageHandler"
             commandId="org.jboss.tools.deltacloud.ui.createinstanceFromAnyImage">
 			<enabledWhen>
-               <with
-                     variable="selection">
-                     <and>
-						<count value="+" />
-						<iterate operator="and">
-							<adapt
-					             type="org.jboss.tools.deltacloud.core.DeltaCloud">
-									<test property="org.jboss.tools.deltacloud.ui.commands.isValid"
-										value="true"/>
-							</adapt>
-		               	</iterate>
-		             </and>
-               </with>
+				<or>
+	           		<with
+	                 	variable="selection">
+	                 	<and>
+							<count value="+" />
+							<iterate operator="and">
+								<adapt
+					        	    	type="org.jboss.tools.deltacloud.core.DeltaCloud">
+										<test property="org.jboss.tools.deltacloud.ui.commands.isValid"
+											value="true"/>
+								</adapt>
+		               		</iterate>
+		            	</and>
+	          		</with>
+	          		<with
+						variable="activePart">
+							<instanceof value="org.jboss.tools.deltacloud.ui.views.cloudelements.InstanceView" />
+					</with>
+				</or>
 			</enabledWhen>
       </handler>
    </extension>
