JBIDE-8661 ModeShape Tools' SLF4J LoggerFactoryBinder Implementation Not Found On Classpath. StaticLoggerBinder moved to package "org.slf4j.impl." JBIDE-6656 Create a documentation plugin. A documentation (Eclipse context help) was created. JBIDE-8242 Change the ModeShape Eclipse plugin to enable resource versioning in the repository. A checkbox, initially set to the value of a user-managed preference, is available each time files are published. JBIDE-8396 ModeShape Preference page New Filtered File Extension and New Filtered Folder Name dialogs don't validate for existence of entered file extension and folder names. The OK button now will only enable when all the required information is present. JBDS-1403 ModeShape Tools Should Show The User The Areas In The ModeShape Workspace That Published Files Will Be Sequenced. A ComboBox now contains all the known workspace areas. In addition to that, the user can type in the path to workspace area not found in the known areas.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30219 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.properties
@@ -14,7 +14,9 @@ bundleVendor = JBoss by Red Hat
 contextMenu.label = ModeShape
 decorator.description = Decorates objects in the ModeShape View
 decorator.label = ModeShape View Decorator
+fileFiltersPreferencePage = File Filters
 modeShapeCategory = ModeShape
+preferenceInitializer = Preference Initializer for default values
 publishCommand.name = Publish
 serverView = ModeShape
 showPublishedLocationsCommand.name = Show Published Locations
