--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/preferences/prefs.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/preferences/prefs.properties
@@ -10,11 +10,14 @@
 # individual contributors.
 #
 
-# This properties file is read in by PrefUtils. The delimiter values are used when the preference values are stored and the
-# valid character values are used by the editors when they validate user input.
+# This properties file is read in by PreferenceInitializer and contains preference default values. The delimiter values are used 
+# when the preference values are stored and the valid character values are used by the field editors when they validate user input.
 
 fileExtension.delimiter = ,
 fileExtension.invalidChars = *?<>|/\:;.
 
 folderName.delimiter = ,
 folderName.invalidChars = *?<>|/\:;
+
+# indicates if ModeShape server should version resources
+enableVersioning = false
