--- a/modeshape/plugins/org.jboss.tools.modeshape.rest.doc.user/plugin.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest.doc.user/plugin.properties
@@ -9,11 +9,5 @@
 # See the AUTHORS.txt file in the distribution for a full listing of
 # individual contributors.
 #
-
-# Root logger option
-log4j.rootLogger=INFO, LOGFILE
-
-log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.Append=true
-log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+bundleName = ModeShape REST Eclipse Publishing Plug-in Guide
+bundleVendor = JBoss by Red Hat
