--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.xml
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.xml
@@ -199,17 +199,7 @@
       </decorator>
    </extension>
 
-<!-- Context Help -->
-   <extension point="org.eclipse.help.contexts">
-      <contexts file="docs/helpContexts.xml"  />
-   </extension>
-    
-<!-- Help Table of Contents -->
-   <extension point="org.eclipse.help.toc">
-      <toc file="docs/toc.xml" primary="true" />
-   </extension>
-
-<!-- Preference Page -->
+<!-- Main Preference Page -->
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
@@ -218,4 +208,24 @@
             id="modeShapePreferencePage">
       </page>
    </extension>
+
+<!-- File Filters Preference Page -->
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            name="%fileFiltersPreferencePage"
+            category="modeShapePreferencePage"
+            class="org.jboss.tools.modeshape.rest.preferences.FileFiltersPreferencePage"
+            id="modeShapeFileFiltersPreferencePage">
+      </page>
+
+<!-- Preference Initializer -->
+   </extension>
+        <extension
+            point="org.eclipse.core.runtime.preferences"
+            id="modeShapeDefaultPreferenceInitializer"
+            name="%preferenceInitializer">
+        <initializer class="org.jboss.tools.modeshape.rest.preferences.PreferenceInitializer" />
+    </extension>
+
 </plugin>
