--- a/modeshape/plugins/pom.xml
+++ b/modeshape/plugins/pom.xml
@@ -8,5 +8,6 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.tools.modeshape.rest</module>
+		<module>org.jboss.tools.modeshape.rest.doc.help</module>
 	</modules>
 </project>
