--- a/download.jboss.org/jbosstools/updates/requirements/indigo/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/indigo/build.xml
@@ -5,7 +5,7 @@
 		-os ${target.os} -ws ${target.ws} -arch ${target.arch} -nl ${target.nl} 
 		-consoleLog -nosplash -data /tmp
 		-application org.eclipse.ant.core.antRunner
-		-f "/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/eclipse/build.xml"
+		-f "/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/indigo/build.xml"
 		
 		or, run headless on qa01 server, where Eclipse is installed into ~/eclipse:
 		
@@ -13,16 +13,16 @@
 		${JAVA_HOME}/bin/java -cp ~/eclipse/plugins/org.eclipse.equinox.launcher_*.jar \
 			org.eclipse.equinox.launcher.Main -vm ${JAVA_HOME} -consoleLog -nosplash -data /tmp \
 			-application org.eclipse.ant.core.antRunner \
-			-f ~/RHDS/updates/requirements/eclipse/build.xml -Ddestination=/tmp/eclipse-repo
+			-f ~/RHDS/updates/requirements/indigo/build.xml -Ddestination=/tmp/indigo-repo
 	-->
 	<target name="mirror">
-		<property name="URL" value="http://download.eclipse.org/eclipse/updates/3.7milestones/" />
+		<property name="URL" value="http://download.eclipse.org/releases/indigo/201103180900/aggregate/" />
 
-		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/eclipse/" />
+		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/indigo/" />
 		<property name="compress" value="true" />
 
 		<p2.mirror>
-			<repository location="file:${destination}/3.7M6/" name="Eclipse 3.7" />
+			<repository location="file:${destination}/M6/" name="Indigo M6" />
 			<source>
 				<repository location="${URL}" />
 			</source>
@@ -30,6 +30,6 @@
 			<slicingOptions includeFeatures="true" followStrict="true" />
 		</p2.mirror>
 
-		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/3.7M6/" artifactRepository="file:${destination}/3.7M6/" publishartifacts="true" source="${destination}/3.7M6/" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/M6/" artifactRepository="file:${destination}/M6/" publishartifacts="true" source="${destination}/M6/" compress="${compress}" />
 	</target>
 </project>
