--- a/download.jboss.org/jbosstools/updates/requirements/webtools/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/webtools/build.xml
@@ -5,7 +5,7 @@
 		-os ${target.os} -ws ${target.ws} -arch ${target.arch} -nl ${target.nl} 
 		-consoleLog -nosplash -data /tmp
 		-application org.eclipse.ant.core.antRunner
-		-f "/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/birt/build-indigo.xml"
+		-f "/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/webtools/build-indigo.xml"
 		
 		or, run headless on qa01 server, where Eclipse is installed into ~/eclipse:
 		
@@ -13,9 +13,9 @@
 		${JAVA_HOME}/bin/java -cp ~/eclipse/plugins/org.eclipse.equinox.launcher_*.jar \
 			org.eclipse.equinox.launcher.Main -vm ${JAVA_HOME} -consoleLog -nosplash -data /tmp \
 			-application org.eclipse.ant.core.antRunner \
-			-f ~/RHDS/updates/requirements/birt/build-indigo.xml -Ddestination=/tmp/birt-repo
+			-f ~/RHDS/updates/requirements/webtools/build-indigo.xml -Ddestination=/tmp/webtools-repo
 
-		or, headless on local:
+		or, on local:
 	
 		java -cp /home/nboldt/eclipse/eclipse361/plugins/org.eclipse.equinox.launcher_*.jar \
 			org.eclipse.equinox.launcher.Main -consoleLog -nosplash -data /tmp \
@@ -23,26 +23,20 @@
 
 	-->
 	<target name="mirror">
-		<property name="URL" value="http://download.eclipse.org/birt/update-site/4.0-interim/" />
-		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/birt/" />
+		<property name="URL" value="http://download.eclipse.org/webtools/downloads/drops/R3.3.0/S-3.3.0M6-20110311022618/repository/" />
+		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/webtools/" />
 		<property name="compress" value="true" />
 
 		<p2.mirror>
-			<repository location="file:${destination}/4.0" name="Extra BIRT plugins for Eclipse 3.7 (Not in Indigo)" />
+			<repository location="file:${destination}/3.3M6/" name="Web Tools plugins for Eclipse 3.7 Indigo" />
 			<source>
 				<repository location="${URL}" />
 			</source>
 
 			<slicingOptions includeFeatures="true" followStrict="true" />
 
-			<iu id="org.eclipse.birt.osgi.runtime.sdk.feature.group" />
-			<iu id="org.eclipse.birt.feature.group" />
-			<iu id="org.eclipse.birt.integration.wtp.feature.group" />
-			<iu id="org.eclipse.birt.chart.feature.group" />
-			<iu id="org.eclipse.birt.chart.integration.wtp.feature.group" />
-
 		</p2.mirror>
 
-		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/4.0" artifactRepository="file:${destination}/4.0" publishartifacts="true" source="${destination}/4.0" compress="${compress}" />
+		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/3.3M6/" artifactRepository="file:${destination}/3.3M6/" publishartifacts="true" source="${destination}/3.3M6/" compress="${compress}" />
 	</target>
 </project>
