tweak paths to indigo folders
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30251 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/indigo/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/indigo/build.xml
@@ -16,7 +16,7 @@
 			-f ~/RHDS/updates/requirements/indigo/build.xml -Ddestination=/tmp/indigo-repo
 	-->
 	<target name="mirror">
-		<property name="URL" value="http://download.eclipse.org/releases/indigo/201103180900/aggregate/" />
+		<property name="URL" value="http://download.eclipse.org/releases/indigo/" />
 
 		<property name="destination" value="/home/nboldt/tru/download.jboss.org/jbosstools/updates/requirements/indigo/" />
 		<property name="compress" value="true" />
