JBDS-1403 The known repository workspace areas are now shown to the user in a ComboBox. The user can choose one of those or enter on of their own. JBIDE-6656 Created a documentation-only plugin. Moved the context help pages into this new plugin. JBIDE-8242 Created a preference user can set to version files that are published. At the time of publishing the user can override this preference. JBIDE-8396 Filter folder and file names preference now doesn't allow duplicates. JBIDE-8661 SLF4J logging is fixed. Trace logging is mapped to Elipse's "info" messages. Still need to update to the ModeShape 2.5.0 GA jar when released (using a beta jar now). Also have to update the Eclipse context help images and pages.
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30268 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
@@ -29,6 +29,12 @@ errorDeletingServerRegistryFile = There was a problem deleting server registry f
 errorDialogTitle = Error
 errorRestoringServerRegistry = Error trying to restore the server registry from file "{0}"
 errorSavingServerRegistry = Error trying to save the server registry to "{0}"
+    
+fileFiltersPreferencePageDescription = Add or remove file extensions and folder names. Files with a matching file extension or files that are contained in a folder with a matching name will NOT be published to or unpublished from repositories.
+fileFiltersPreferencePageFilteredFileExtensionsLabel = Filtered File Extensions:
+fileFiltersPreferencePageFilteredFolderNamesLabel = Filtered Folder Names:
+fileFiltersPreferencePageMessage = File Filters
+fileFiltersPreferencePageTitle = File Filters
 
 missingImage = The following image cannot be found "{0}"
 
@@ -38,11 +44,14 @@ newFilteredFileExtensionDialogTitle = New Filtered File Extension
 newFilteredFolderNameDialogLabel = Folder name:
 newFilteredFolderNameDialogTitle = New Filtered Folder Name
 
+newItemDialogValueExists = Value already exists
+
 newServerActionText = New Server
 newServerActionToolTip = Create a new server
 
-prefUtilsPropertyFileNotFound = The "{0}" property preference file is missing or could not be loaded. All property default values will be used.
-prefUtilsPropertyNotFound = The "{0}" property is missing. Default value of "{1}" will be used.
+preferenceDefaultScopeNotFound = The default scope for plugin "{0}" cannot be found.
+preferenceFileNotFound = The "{0}" preference defaults value file is missing or could not be loaded.
+preferenceNotFound = The "{0}" property is missing. Default value of "{1}" will be used.
 
 publishedLocationsDialogCopyUrlButton = Copy URL
 publishedLocationsDialogCopyUrlButtonToolTip = Copy to the clipboard the selected workspace URL where the file is published
@@ -60,11 +69,11 @@ publishingConsoleName = ModeShape
 publishingConsoleProblemCreatingHyperlinkMsg = Unexpected problem creating hyperlink in ModeShape Message Console view
 publishingConsoleFilePathNotFoundMsg = A hyperlink could not be created in the ModeShape Message Console because the file path of "{0}" could not be found.
     
-preferencePageDescription = Add or remove file extensions and folder names. Files with a matching file extension or files that are contained in a folder with a matching name will NOT be published to or unpublished from repositories.
-preferencePageFilteredFileExtensionsLabel = Filtered File Extensions:
-preferencePageFilteredFolderNamesLabel = Filtered Folder Names:
+preferencePageDescription = General settings for ModeShape Tools:
+preferencePageEnableVersioningEditor = Enable resource versioning
+preferencePageEnableVersioningEditorToolTip = Inform ModeShape server to keep multiple versions of resources
 preferencePageMessage = ModeShape
-preferencePageTitle = ModeShape Preferences
+preferencePageTitle = ModeShape
 
 publishJobCanceled = Job {0} was canceled. See log for details.
 publishJobDurationMsg = {0} hour(s), {1} minute(s), {2} second(s)
@@ -97,12 +106,13 @@ publishPageMissingRepositoryStatusMsg = A repository must be selected
 publishPageMissingServerStatusMsg = A server must be selected
 publishPageMissingWorkspaceStatusMsg = A workspace must be selected
 publishPageNewServerButton = New...
-publishPageNoAvailableRepositoriesStatusMsg = There are no repositories available on that server
+publishPageNoAvailableRepositoriesStatusMsg = There are no repositories available on that server, or a \nconnection to the server cannot be made.
 publishPageNoAvailableServersStatusMsg = A server must be created first
-publishPageNoAvailableWorkspacesStatusMsg = There are no JCR workspaces available on that server and repository
-publishPageNoResourcesToPublishStatusMsg = There are no files that can be published
+publishPageNoAvailableWorkspacesStatusMsg = There are no JCR workspaces available on that server and repository, or a \nconnection to the server cannot be made.
+publishPageNoResourcesToPublishStatusMsg = There are no files that can be published (may be due to your file filter preference).
 publishPageNoResourcesToUnpublishStatusMsg = There are no files that can be unpublished
-publishPagePublishOkStatusMsg = Choose the location of the JCR repository where your local files and folders will be published, and then click "Finish".
+publishPageOpenPreferencePageLink = ( change default in your <a>preferences</a> )
+publishPagePublishOkStatusMsg = Choose the location of the JCR repository where your local files \nand folders will be published, and then click "Finish."
 publishPagePublishResourcesLabel = These files were selected and will be published:
 publishPageRecurseCheckBox = Recurse folders and projects
 publishPageRecurseCheckBoxToolTip = Add all files under folders recursively under selected projects and folders
@@ -111,6 +121,9 @@ publishPageRepositoryLabel = JCR Repository:
 publishPageRepositoryToolTip = The JCR repository where the JCR workspace is located
 publishPageServerLabel = Server:
 publishPageServerToolTip = The server where the JCR repository is located
+publishPageUnableToObtainWorkspaceAreas = Unable to obtain the workspace areas for workspace "{0}"
+publishPageVersionCheckBox = Version the published files
+publishPageVersionCheckBoxToolTip = The published files will be versioned on the ModeShape server.
 publishPageUnpublishOkStatusMsg = Choose the location of the JCR repository where the files will be unpublished, and then click "Finish".
 publishPageUnpublishResourcesLabel = These files were selected and will be unpublished:
 publishPageUnpublishTitle = Unpublish the selected files
