--- a/modeshape/plugins/pom.xml
+++ b/modeshape/plugins/pom.xml
@@ -9,4 +9,7 @@
 	<modules>
 		<module>org.jboss.tools.modeshape.rest</module>
 	</modules>
+	<modules>
+		<module>org.jboss.tools.modeshape.rest.doc.user</module>
+	</modules>
 </project>
