https://issues.jboss.org/browse/JBIDE-8533 Deprecated the jbt.bpel.facet.core in favor of bpel.facet.core with backward compatibility for SOA-P 5.1
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30320 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/org.jboss.tools.bpel.runtimes/plugin.properties
+++ b/bpel/plugins/org.jboss.tools.bpel.runtimes/plugin.properties
@@ -16,9 +16,14 @@ MODULE_TYPE_NAME=BPEL 2.0 Process
 MODULE_TYPE_DESCRIPTION=Module representing a BPEL process
 
 BPEL_CORE_FACET_LABEL=BPEL 2.0 Facet
-BPEL_CORE_FACET_DESCRIPTION=Enables modelling and deployment of BPEL processes.
+BPEL_CORE_FACET_DESCRIPTION=Enables modeling and deployment of BPEL processes.
 BPEL_FACET_CATEGORY_LABEL=BPEL 2.0
 BPEL_FACET_TEMPLATE_LABEL=BPEL 2.0 Project
 NEW_BPEL_CATEGORY=BPEL 2.0
 NEW_BPEL_PROJECT=BPEL Project
 NEW_BPEL_PROJECT_DESCRIPTION=Create a new BPEL project. 
+
+# This is provided for backward compatibility with the deprecated jbt.bpel.facet.core
+OLD_BPEL_CORE_FACET_LABEL=JBoss BPEL 2.0 Facet (SOA-P v5.1 and earlier)
+OLD_BPEL_CORE_FACET_DESCRIPTION=Enables modeling and deployment of BPEL processes to JBoss SOA-Platform version 5.1 and earlier.
+OLD_BPEL_FACET_TEMPLATE_LABEL=JBoss BPEL 2.0 Project (SOA-P v5.1 and earlier)
