JBIDE-8688 ModeShape Tools' Published Locations Dialog's Table Is Sized Too Small When It Contains Just A Couple Rows. Table is now being sized based on number of workspace locations found. And, if needed, a few extra rows are being added to make it look better. JBIDE-8689 ModeShape Tools' Folder Filter Should Also Filter Projects. Modified the filter to also filter out projects whose names match a name contained in the folder name preference.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30376 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
@@ -109,7 +109,7 @@ publishPageNewServerButton = New...
 publishPageNoAvailableRepositoriesStatusMsg = There are no repositories available on that server, or a \nconnection to the server cannot be made.
 publishPageNoAvailableServersStatusMsg = A server must be created first
 publishPageNoAvailableWorkspacesStatusMsg = There are no JCR workspaces available on that server and repository, or a \nconnection to the server cannot be made.
-publishPageNoResourcesToPublishStatusMsg = There are no files that can be published (See preference filter settings).
+publishPageNoResourcesToPublishStatusMsg = There are no files that can be published (may be due to your file filter preferences).
 publishPageNoResourcesToUnpublishStatusMsg = There are no files that can be unpublished
 publishPageOpenPreferencePageLink = ( change default in your <a>preferences</a> )
 publishPagePublishOkStatusMsg = Choose the location of the JCR repository where your local files \nand folders will be published, and then click "Finish."
